fix: marges titres md + couleurs liens - Ajout de marges verticales aux titres pour aérer les pages - Changement de la couleur des liens pour les rendre plus visibles

--- a/src/public/style/markdown.css
+++ b/src/public/style/markdown.css
@@ -1,4 +1,3 @@
-
 markdown img {
   max-width: 100%;
   height: auto;
@@ -8,7 +7,12 @@ markdown img {
 }
 
 markdown a {
-  color: var(--insash-rose-pale);
+  color: var(--insash-rose-fonce);
+  text-decoration: none;
+}
+
+markdown a:hover {
+  text-decoration: underline;
 }
 
 markdown strong {
@@ -16,7 +20,7 @@ markdown strong {
 }
 
 markdown em {
-  font-weight: 300;
+  font-weight: inherit;
 }
 
 markdown pre {
@@ -25,16 +29,18 @@ markdown pre {
 
 markdown em strong,
 markdown strong em {
-  font-weight: 500;
+  /* font-weight: 500; */
   color: var(--insash-rose-fonce);
 }
 
 markdown ul {
   margin: 1em 30px;
 }
+
 markdown ol {
   margin: 1em 30px;
 }
+
 markdown li {
   margin: 0.5em 0;
 }
@@ -75,43 +81,65 @@ markdown tbody tr:nth-child(even) {
   background-color: var(--website-bg-color-light-2);
 }
 
-markdown blockquote{
+markdown blockquote {
 
-    width:95%;
-    margin:1em auto;
-    color: #555555;
-    padding:0.5em 30px 0.5em 50px;
-    border-left:8px solid var(--insash-rose-fonce) ;
-    line-height:1.6;
-    position: relative;
-    background: var(--website-bg-color-light-2);
-    border-radius: 0 10px 10px 0px;
-  }
-  
-  markdown blockquote::before{
-    content: "\201C";
-    color:var(--insash-rose-fonce);
-    font-size:4em;
-    position: absolute;
-    left: 10px;
-    top:-10px;
-  }
-  
-  markdown blockquote::after{
-    content: '';
-  }
-  
-  markdown blockquote span{
-    display:block;
-    color:#333333;
-    font-style: normal;
-    font-weight: bold;
-    margin-top:1em;
-  }
+  width: 95%;
+  margin: 1em auto;
+  color: #555555;
+  padding: 0.5em 30px 0.5em 50px;
+  border-left: 8px solid var(--insash-rose-fonce);
+  line-height: 1.6;
+  position: relative;
+  background: var(--website-bg-color-light-2);
+  border-radius: 0 10px 10px 0px;
+}
 
-  markdown hr {
-    border: 0;
-    height: 2px;
-    background: var(--website-bg-color-light-2);
-    margin: 1em 0;
+markdown blockquote::before {
+  content: "\201C";
+  color: var(--insash-rose-fonce);
+  font-size: 4em;
+  position: absolute;
+  left: 10px;
+  top: -10px;
+}
+
+markdown blockquote::after {
+  content: '';
+}
+
+markdown blockquote span {
+  display: block;
+  color: #333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top: 1em;
+}
+
+markdown hr {
+  border: 0;
+  height: 2px;
+  background: var(--website-bg-color-light-2);
+  margin: 1em 0;
+}
+
+
+
+/* marges verticales titres */
+markdown {
+  h1 {
+    margin-top: 2em;
+    margin-bottom: 1em;
   }
+  h2 {
+    margin-top: 2em;
+    margin-bottom: 1em;
+  }
+  h3 {
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+  }
+  h4,h5,h6 {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+  }
+}
